--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "ejs": "^3.0.2"
+    "ejs": "^3.0.2",
+    "pg": "^8.0.0"
   },
   "engines": {
     "node": "12.x"
