--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "ejs": "^3.0.2",
-    "pg": "^8.0.0"
+    "pg": "^8.0.0",
+    "body-parser": "^1.19.0"
   },
   "engines": {
     "node": "12.x"
