--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -1,4 +1,5 @@
 dependencies:
+  body-parser: 1.19.0
   ejs: 3.0.2
   express: 4.17.1
   pg: 8.0.0
@@ -512,6 +513,7 @@ registry: 'https://registry.npmjs.org/'
 shrinkwrapMinorVersion: 9
 shrinkwrapVersion: 3
 specifiers:
+  body-parser: ^1.19.0
   ejs: ^3.0.2
   express: ^4.17.1
   pg: ^8.0.0
