--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ejs": "^3.0.2",
     "pg": "^8.0.0",
     "body-parser": "^1.19.0",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "node-fetch": "^2.6.0"
   },
   "engines": {
     "node": "12.x"
