--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -1,5 +1,6 @@
 dependencies:
   axios: 0.19.2
+  body-parser: 1.19.0
   ejs: 3.0.2
   express: 4.17.1
   node-fetch: 2.6.0
@@ -541,6 +542,7 @@ shrinkwrapMinorVersion: 9
 shrinkwrapVersion: 3
 specifiers:
   axios: ^0.19.2
+  body-parser: ^1.19.0
   ejs: ^3.0.2
   express: ^4.17.1
   node-fetch: ^2.6.0
