--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pg": "^8.0.0",
     "axios": "^0.19.2",
     "node-fetch": "^2.6.0",
-    "body-parser": "^1.19.0"
+    "body-parser": "^1.19.0",
+    "ejs-lint": "^1.1.0"
   },
   "engines": {
     "node": "12.x"
